--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
               <input class="reg-form__input" id="reg-form__user-birthday_input" type="text">
             </div>
           </div>
+        </div>
+        <div class="container reg-form__container_button">
           <div class="row reg-form__row reg-form__row_form-button">
             <div class="col reg-form__col reg-form__col_form-button">
               <button id="form__button" onclick="">Save</button>
@@ -122,7 +124,24 @@
             <p class="result-table__item" onclick="itemResultTableClick('id')">birthday</p>
           </div>
         </div>
-
+        <div class="row result-table__row result-table__row_table-item">
+          <div class="col result-table__col result-table__col_table-item">
+            <p class="result-table__item" onclick="itemResultTableClick('id')">name</p>
+          </div>
+          <div class="col result-table__col result-table__col_table-item">
+            <p class="result-table__item" onclick="itemResultTableClick('id')">surname</p>
+          </div>
+          <div class="col result-table__col result-table__col_table-item">
+            <p class="result-table__item" onclick="itemResultTableClick('id')">email</p>
+          </div>
+          <div class="col result-table__col result-table__col_table-item">
+            <p class="result-table__item" onclick="itemResultTableClick('id')">phone</p>
+          </div>
+          <div class="col result-table__col result-table__col_table-item">
+            <p class="result-table__item" onclick="itemResultTableClick('id')">birthday</p>
+          </div>
+        </div>
+        
       </div>
     </section>
     
