--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
-<body onload="renderView('result-table')">
+<body onload="onFirstLoad()">
 
 
 	<div class="app">
 
-    <section class="winner__section">
+    <section id="winner__section">
       <div class="container winner__container">
         <div class="row winner__row">
           <div class="col winner__col winner__col_user-name">
@@ -24,8 +24,8 @@
       </div>
     </section>
 
-    <section class="reg-form__section">
-      <form action="">
+    <section id="reg-form__section">
+      <!-- <form action="">
         <div class="container reg-form__container">
           <div class="row reg-form__row reg-form__row_form-title">
             <div class="col reg-form__col reg-form__col_form-title">
@@ -85,11 +85,11 @@
             </div>
           </div>
         </div>
-      </form>
+      </form> -->
     </section>
 
     <section id="result-table__section">
-      <div class="container result-table__container">
+      <!-- <div class="container result-table__container">
         <div class="row result-table__row result-table__row_table-title">
           <div class="col result-table__col result-table__col_table-title">
             <p class="result-table__title">Name</p>
@@ -141,9 +141,9 @@
             <p class="result-table__item" onclick="itemResultTableClick('id')">birthday</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
-    
+
   </div>
 
 
