tiny style edit to improve UX

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container winner__container">
         <div class="row winner__row">
           <div class="col winner__col winner__col_user-name">
-            <p>Winners: <span id="winner__user-name">...</span></p>
+            <p>Winner: <span id="winner__user-name">...</span></p>
           </div>
           <div class="col winner__col winner__col_button">
             <button id="winner__button" onclick="newWinnerButtonClick()">New winner</button>
